fix the slideshow on iphone image

--- a/CurrentWeb/Prototype/css/style.css
+++ b/CurrentWeb/Prototype/css/style.css
@@ -41,7 +41,9 @@ span{font-weight: bold}
 .down_lists .img-1, .down_lists .img-2, .down_lists .img-3{height: 30px; margin-top: 1px; margin-bottom: 10px}
 .slideshow{width: 200px; height: 390px; background: url(../images/img-4.png); background-position: center; background-size: 100% 100%; padding: 68px 15px 58px 15px; margin-bottom: 20px !important}
 .slideshow .item img{width: 100%; height: auto}
-
+.selector {position: relative; bottom: 0; left: 0; z-index: 15; width: auto; padding-left: 0; margin-left: 0; text-align: left; list-style: none}
+.selector li {display: inline-block; width: 100% !important; height: auto !important; margin: 0; text-indent: 0px; cursor: pointer; background-color: transparent; background-color: transparent; border: 0px; border-radius: 0px}
+.selector .active {font-weight: bold; background: transparent; border: 0}
 .postion{text-align: right}
 .text-left {text-align: left !important}
 .offset-marge {margin: 0 auto; float: none;margin-bottom: 25px}
